@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2452 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2453 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -237,3 +237,5 @@ Changes from NetBSD 8.0 to NetBSD 9.0:
 	arm: Provide generic start code that allows a GENERIC kernel to be used
 		on FDTised boards. [skrll 20181018]
 	tzdata: updated to 2018f [kre 20181019]
+	amdccp(4): Add driver for AMD Cryptographic Coprocessor RNG.
+		[jakllsch 20181019]
